--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Strings/en-US/Main.resw
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Strings/en-US/Main.resw
@@ -117,7 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="About.Label" xml:space="preserve">
+    <value>About</value>
+  </data>
   <data name="Refresh.Label" xml:space="preserve">
     <value>Refresh</value>
+  </data>
+  <data name="Setting.Label" xml:space="preserve">
+    <value>Setting</value>
   </data>
 </root>
