--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Strings/en-US/Detail.resw
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Strings/en-US/Detail.resw
@@ -118,19 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="OpenLockScreenSetting.Label" xml:space="preserve">
-    <value />
+    <value>Open lock screen setting</value>
   </data>
   <data name="OpenWallpaperSetting.Label" xml:space="preserve">
-    <value />
+    <value>Open wallpaper setting</value>
   </data>
   <data name="Save.Label" xml:space="preserve">
     <value>Save</value>
   </data>
   <data name="SetLockScreen.Label" xml:space="preserve">
-    <value />
+    <value>Set as lock screen</value>
   </data>
   <data name="SetWallpaper.Label" xml:space="preserve">
-    <value />
+    <value>Set as wallpaper</value>
   </data>
   <data name="Share.Label" xml:space="preserve">
     <value>Share</value>
