--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Strings/en-US/Setting.resw
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Strings/en-US/Setting.resw
@@ -120,4 +120,10 @@
   <data name="SaveLocation.Header" xml:space="preserve">
     <value>Save Location</value>
   </data>
+  <data name="Area.Header" xml:space="preserve">
+    <value>Country/Area</value>
+  </data>
+  <data name="WallpaperSize.Header" xml:space="preserve">
+    <value>Wallpaper Size</value>
+  </data>
 </root>
